feat: implement function to convert ASCII to number

--- a/part2_encryption.ipynb
+++ b/part2_encryption.ipynb
@@ -58,6 +58,79 @@
       "source": [
         "number_to_binary(65)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "dbdec2ce",
+      "metadata": {},
+      "source": [
+        "### ASCII a Número"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fa18da20",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\"\"\"\n",
+        "Prompt:\n",
+        "Genera un string que represente los caracteres de ASCII de 0-127 en un string.\n",
+        "\"\"\"\n",
+        "ASCII_TABLE = (\n",
+        "    \"\\x00\\x01\\x02\\x03\\x04\\x05\\x06\\x07\\x08\\x09\\x0a\\x0b\\x0c\\x0d\\x0e\\x0f\"\n",
+        "    \"\\x10\\x11\\x12\\x13\\x14\\x15\\x16\\x17\\x18\\x19\\x1a\\x1b\\x1c\\x1d\\x1e\\x1f\"\n",
+        "    \" !\\\"#$%&'()*+,-./0123456789:;<=>?@\"\n",
+        "    \"ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\]^_`\"\n",
+        "    \"abcdefghijklmnopqrstuvwxyz{|}~\"\n",
+        "    \"\\x7f\"\n",
+        ")\n",
+        "\n",
+        "def ascii_to_number(ch):\n",
+        "    \"\"\"\n",
+        "    Parámetros:\n",
+        "    ch -> Caracter\n",
+        "\n",
+        "    Recurso:\n",
+        "    ASCII_TABLE -> Tabla representativa de los valores a ASCII\n",
+        "\n",
+        "    Método para devovler el número de la posición correspondiente para un caracter en la tabla ASCII.\n",
+        "    \"\"\"\n",
+        "    if ch == \"\":\n",
+        "        return -1\n",
+        "\n",
+        "    c = ch[0]\n",
+        "\n",
+        "    i = 0\n",
+        "    while i < 128:\n",
+        "        if ASCII_TABLE[i] == c:\n",
+        "            return i\n",
+        "        i += 1\n",
+        "\n",
+        "    return -1\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d7cd2454",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "97"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ascii_to_number(\"a\")"
+      ]
     }
   ],
   "metadata": {
