--- a/part2_encryption.ipynb
+++ b/part2_encryption.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "id": "f3df3ff3",
       "metadata": {},
       "outputs": [],
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "121e70d8",
       "metadata": {},
       "outputs": [
@@ -50,7 +50,7 @@
               "'01000001'"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "fa18da20",
       "metadata": {},
       "outputs": [],
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "d7cd2454",
       "metadata": {},
       "outputs": [
@@ -123,13 +123,66 @@
               "97"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "ascii_to_number(\"a\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4207ba98",
+      "metadata": {},
+      "source": [
+        "### Binario a Base64\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a59d2b08",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def binary_to_base64(bin_string):\n",
+        "    BASE64_TABLE = (\n",
+        "        \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+        "        \"abcdefghijklmnopqrstuvwxyz\"\n",
+        "        \"0123456789+/\"\n",
+        "    )\n",
+        "\n",
+        "    while len(bin_string) % 6 != 0:\n",
+        "        bin_string += \"0\"\n",
+        "\n",
+        "    base64_string = \"\"\n",
+        "    for i in range(0, len(bin_string), 6):\n",
+        "        six_bits = bin_string[i:i+6]\n",
+        "        decimal_value = int(six_bits, 2)\n",
+        "        base64_char = BASE64_TABLE[decimal_value]\n",
+        "        base64_string += base64_char\n",
+        "\n",
+        "    return base64_string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "id": "bab35bb9",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "QQ\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(binary_to_base64('01000001'))"
       ]
     }
   ],
