--- a/part2_encryption.ipynb
+++ b/part2_encryption.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "id": "f3df3ff3",
       "metadata": {},
       "outputs": [],
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "121e70d8",
       "metadata": {},
       "outputs": [
@@ -50,7 +50,7 @@
               "'01000001'"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "id": "fa18da20",
       "metadata": {},
       "outputs": [],
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 17,
       "id": "d7cd2454",
       "metadata": {},
       "outputs": [
@@ -123,7 +123,7 @@
               "97"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "a59d2b08",
       "metadata": {},
       "outputs": [],
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "bab35bb9",
       "metadata": {},
       "outputs": [
@@ -183,6 +183,115 @@
       ],
       "source": [
         "print(binary_to_base64('01000001'))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c9288680",
+      "metadata": {},
+      "source": [
+        "### Binario a ASCII"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "72acc5ed",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def binary_to_ascii(bin_string):\n",
+        "    while len(bin_string) % 8 != 0:\n",
+        "        bin_string += \"0\"\n",
+        "\n",
+        "    ascii_string = \"\"\n",
+        "    for i in range(0, len(bin_string), 8):\n",
+        "        byte = bin_string[i:i+8]\n",
+        "        val = int(byte, 2)\n",
+        "        if 0 <= val < len(ASCII_TABLE):\n",
+        "            ascii_string += ASCII_TABLE[val]\n",
+        "        else:\n",
+        "            ascii_string += \"?\"\n",
+        "    return ascii_string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "id": "ab97f4d1",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(binary_to_ascii('01000001'))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d14da8d4",
+      "metadata": {},
+      "source": [
+        "### Bas64 a ASCII"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "id": "3a37792c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def base64_to_ascii(base64_string):\n",
+        "    BASE64_TABLE = (\n",
+        "        \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+        "        \"abcdefghijklmnopqrstuvwxyz\"\n",
+        "        \"0123456789+/\"\n",
+        "    )\n",
+        "\n",
+        "    bin_string = \"\"\n",
+        "    for ch in base64_string:\n",
+        "        index = BASE64_TABLE.find(ch)\n",
+        "        if index == -1:\n",
+        "            continue\n",
+        "        six_bits = number_to_binary(index)[-6:]\n",
+        "        bin_string += six_bits\n",
+        "\n",
+        "    ascii_string = \"\"\n",
+        "    for i in range(0, len(bin_string), 8):\n",
+        "        byte = bin_string[i:i+8]\n",
+        "        if len(byte) < 8:\n",
+        "            continue\n",
+        "        val = int(byte, 2)\n",
+        "        if 0 <= val < len(ASCII_TABLE):\n",
+        "            ascii_string += ASCII_TABLE[val]\n",
+        "        else:\n",
+        "            ascii_string += \"?\"\n",
+        "    return ascii_string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "id": "d2bf070c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(base64_to_ascii('QQ'))"
       ]
     }
   ],
