feat: add new XOR operation to binary using binary first

--- a/part2_encryption.ipynb
+++ b/part2_encryption.ipynb
@@ -293,6 +293,52 @@
       "source": [
         "print(base64_to_ascii('QQ'))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "890a6574",
+      "metadata": {},
+      "source": [
+        "### XOR a Binario"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "id": "852702d2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def xor_to_binary(xor_string, key):\n",
+        "    bin_string = \"\"\n",
+        "    key_length = len(key)\n",
+        "    for i in range(len(xor_string)):\n",
+        "        xor_char = xor_string[i]\n",
+        "        key_char = key[i % key_length]\n",
+        "        xor_val = ascii_to_number(xor_char)\n",
+        "        key_val = ascii_to_number(key_char)\n",
+        "        bin_val = xor_val ^ key_val\n",
+        "        bin_string += number_to_binary(bin_val)\n",
+        "    return bin_string"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "id": "fdaf3352",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0000001100000000000101010000011100001010\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(xor_to_binary(\"HELLO\", \"KEY\"))"
+      ]
     }
   ],
   "metadata": {
